# ComputationalIntel2022_303999

./: Readme.md  pyproject.toml
lab1/: Pippo.py  README.md  pyproject.toml
lab1/lab1/: set_covering.ipynb
lab2/: README.md  lab2.ipynb
lab3/: README.MD  task3.1.ipynb  task3.2.ipynb  task3.3.ipynb  task3.4.ipynb
