[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["GIUSEPPE PELLEGRINO s303999 <s303999@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
